--- a/notebooks/ai.ipynb
+++ b/notebooks/ai.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-16 12:33:01.311051: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-10-16 12:33:02.119533: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-10-16 12:33:02.119598: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-10-16 12:33:02.126910: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-10-16 12:33:02.359545: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-10-16 12:33:02.360387: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-10-16 12:33:07.665657: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from codecarbon import EmissionsTracker"
@@ -16,12 +31,12 @@
    "source": [
     "Once you have installed and imported all the dependencies, you can now create a simple neural network, using [tensorflow](https://www.tensorflow.org/) and the [mnist dataset](https://www.tensorflow.org/api_docs/python/tf/keras/datasets/mnist).\n",
     "\n",
-    "##### 🚥 Don't fit the model just yet!"
+    "**IMPORTANT:** 🚥 Don't fit the model just yet!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,9 +99,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[codecarbon INFO @ 12:33:22] [setup] RAM Tracking...\n",
+      "[codecarbon INFO @ 12:33:22] [setup] GPU Tracking...\n",
+      "[codecarbon INFO @ 12:33:22] No GPU found.\n",
+      "[codecarbon INFO @ 12:33:22] [setup] CPU Tracking...\n",
+      "[codecarbon WARNING @ 12:33:22] No CPU tracking mode found. Falling back on CPU constant mode.\n",
+      "[codecarbon INFO @ 12:33:24] CPU Model on constant consumption mode: AMD EPYC 7763 64-Core Processor\n",
+      "[codecarbon INFO @ 12:33:24] >>> Tracker's metadata:\n",
+      "[codecarbon INFO @ 12:33:24]   Platform system: Linux-6.2.0-1014-azure-x86_64-with-glibc2.31\n",
+      "[codecarbon INFO @ 12:33:24]   Python version: 3.10.8\n",
+      "[codecarbon INFO @ 12:33:24]   CodeCarbon version: 2.3.1\n",
+      "[codecarbon INFO @ 12:33:24]   Available RAM : 7.744 GB\n",
+      "[codecarbon INFO @ 12:33:24]   CPU count: 2\n",
+      "[codecarbon INFO @ 12:33:24]   CPU model: AMD EPYC 7763 64-Core Processor\n",
+      "[codecarbon INFO @ 12:33:24]   GPU count: None\n",
+      "[codecarbon INFO @ 12:33:24]   GPU model: None\n"
+     ]
+    }
+   ],
    "source": [
     "tracker = EmissionsTracker(project_name=\"green_it_mnist\")\n",
     "tracker.start()"
@@ -94,9 +131,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+      "11490434/11490434 [==============================] - 1s 0us/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-16 12:33:31.833229: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 188160000 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "1875/1875 [==============================] - 7s 3ms/step - loss: 0.2987 - accuracy: 0.9129\n",
+      "Epoch 2/2\n",
+      "1797/1875 [===========================>..] - ETA: 0s - loss: 0.1450 - accuracy: 0.9577"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[codecarbon INFO @ 12:33:43] Energy consumed for RAM : 0.000012 kWh. RAM Power : 2.904045581817627 W\n",
+      "[codecarbon INFO @ 12:33:43] Energy consumed for all CPUs : 0.000583 kWh. Total CPU Power : 140.0 W\n",
+      "[codecarbon INFO @ 12:33:43] 0.000596 kWh of electricity used since the beginning.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1439 - accuracy: 0.9580\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[codecarbon INFO @ 12:33:43] Energy consumed for RAM : 0.000012 kWh. RAM Power : 2.904045581817627 W\n",
+      "[codecarbon INFO @ 12:33:43] Energy consumed for all CPUs : 0.000588 kWh. Total CPU Power : 140.0 W\n",
+      "[codecarbon INFO @ 12:33:43] 0.000600 kWh of electricity used since the beginning.\n",
+      "/home/codespace/.python/current/lib/python3.10/site-packages/codecarbon/output.py:168: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  df = pd.concat([df, pd.DataFrame.from_records([dict(data.values)])])\n"
+     ]
+    }
+   ],
    "source": [
     "load_model(2)\n",
     "emissions = tracker.stop()\n"
@@ -111,9 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Emissions: 0.00023338130192471486 kg\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Emissions: {emissions} kg\")"
    ]
@@ -135,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
