Refactor code to improve performance and readability.

--- a/notebooks/web.ipynb
+++ b/notebooks/web.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "This notebook focuses on determining the carbon intensity of a given website based on its IP address. Initially, it presents a method to derive the IP address from a URL. Once the IP address is obtained, the notebook proceeds to query the IP-to-CO2 Intensity API, revealing the average annual grid intensity associated with the IP's geographical location. This exercise offers insights into the environmental impact of digital infrastructures and highlights the importance of sustainable web."
+    "This simple notebook focuses on determining the carbon intensity of a given website based on its IP address. Initially, it presents a method to derive the IP address from a URL. Once the IP address is obtained, the notebook proceeds to query the IP-to-CO2 Intensity API, revealing the average annual grid intensity associated with the IP's geographical location. This exercise offers insights into the environmental impact of digital infrastructures and highlights the importance of sustainable web."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,20 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'158.64.79.160'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = input(\"Please insert the URL address of the website: \")\n",
     "ip = getIPfromURL(url)\n",
@@ -61,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,34 +68,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "    \"country_name\": \"Luxembourg\",\n",
-      "    \"country_code_iso_2\": \"LU\",\n",
-      "    \"country_code_iso_3\": \"LUX\",\n",
-      "    \"carbon_intensity_type\": \"avg\",\n",
-      "    \"carbon_intensity\": 186.567,\n",
-      "    \"generation_from_fossil\": 20.49,\n",
-      "    \"year\": 2021,\n",
-      "    \"checked_ip\": \"158.64.79.160\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "getCarbonIntensity(ip)"
+    "# Check the carbon intensity of the website here:\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Info\n",
+    "\n",
     "- **Carbon Intensity:**\n",
     "The carbon_intensity data returned by the endpoint is provided by [Ember](https://ember-climate.org/data/data-explorer/). The figures returned are annual, average amounts presenting the grams per kilowatt-hour (g/kWh).\n",
     "\n",
@@ -124,8 +98,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question:\n",
+    "What is the carbon intensity and what is the percentage of electricity generated from fossil sources? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Your Answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,80 +137,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "    \"green\": false,\n",
-      "    \"url\": \"uni.lu\",\n",
-      "    \"data\": false\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test = checkGreenDomain(url)"
+    "# Check if the website is green here:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question:\n",
+    "Using the `checkGreenDomain` function provided, can you determine if a specified website is environmentally friendly? If the answer is:\n",
+    "1. *yes*, <ins>please identify and explain the sources or evidence provided by the API that supports this claim</ins>.\n",
+    "\n",
+    "2. *no*, <ins>propose a solution or a set of actions the website could undertake to become more environmentally sustainable.</ins>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Your Answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "    \"url\": \"google.lu\",\n",
-      "    \"hosted_by\": \"Google Inc.\",\n",
-      "    \"hosted_by_website\": \"www.google.com\",\n",
-      "    \"partner\": null,\n",
-      "    \"green\": true,\n",
-      "    \"hosted_by_id\": 595,\n",
-      "    \"modified\": \"2023-09-08T13:06:53\",\n",
-      "    \"supporting_documents\": [\n",
-      "        {\n",
-      "            \"id\": 108,\n",
-      "            \"title\": \"Sustainability at Google\",\n",
-      "            \"link\": \"https://sustainability.google\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"id\": 139,\n",
-      "            \"title\": \"Independent verification of Google 2020 Reporting\",\n",
-      "            \"link\": \"https://s3.nl-ams.scw.cloud/tgwf-web-app-live/uploads/Google_Cloud_-_3degrees_cloud_services_review_statement_final.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=SCWT1WBAW6NZ5SW5GYJ8%2F20231018%2Fnl-ams%2Fs3%2Faws4_request&X-Amz-Date=20231018T092513Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&X-Amz-Signature=34994506d4a96b50dcae8e607ae553edcf7ff2753a67ad0c34bfb9c9646fae69\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"id\": 140,\n",
-      "            \"title\": \"2021 Environmental Report\",\n",
-      "            \"link\": \"https://s3.nl-ams.scw.cloud/tgwf-web-app-live/uploads/google-2021-environmental-report.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=SCWT1WBAW6NZ5SW5GYJ8%2F20231018%2Fnl-ams%2Fs3%2Faws4_request&X-Amz-Date=20231018T092513Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&X-Amz-Signature=bc95c4bc18d9b8cb4f5ef3301bec3789fad61bbcdd176a93e6db687fac1331c1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"id\": 141,\n",
-      "            \"title\": \"2022 Environmental Report\",\n",
-      "            \"link\": \"https://s3.nl-ams.scw.cloud/tgwf-web-app-live/uploads/google-2022-environmental-report.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=SCWT1WBAW6NZ5SW5GYJ8%2F20231018%2Fnl-ams%2Fs3%2Faws4_request&X-Amz-Date=20231018T092513Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&X-Amz-Signature=a4342d93be00fe749e010df33896844786e574aa97c6e441f0bbb5c60a5b7588\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"id\": 142,\n",
-      "            \"title\": \"Independent verification of Google 2021 Reporting\",\n",
-      "            \"link\": \"https://s3.nl-ams.scw.cloud/tgwf-web-app-live/uploads/alphabet-fy2021-environmental-indicators-assurance-letter.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=SCWT1WBAW6NZ5SW5GYJ8%2F20231018%2Fnl-ams%2Fs3%2Faws4_request&X-Amz-Date=20231018T092513Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&X-Amz-Signature=5669065f0c8bcae1a2994660af7217be4a24dcdbf54415094e03970f67bef2cf\"\n",
-      "        }\n",
-      "    ]\n",
-      "}\n"
-     ]
-    }
-   ],
-   "source": [
-    "test2 = checkGreenDomain('google.lu')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,159 +186,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "    \"url\": \"https://www.uni.lu/en/\",\n",
-      "    \"green\": \"unknown\",\n",
-      "    \"bytes\": 10591160,\n",
-      "    \"cleanerThan\": 0.07,\n",
-      "    \"statistics\": {\n",
-      "        \"adjustedBytes\": 7996325.8,\n",
-      "        \"energy\": 0.0060321985725313425,\n",
-      "        \"co2\": {\n",
-      "            \"grid\": {\n",
-      "                \"grams\": 2.6662317690588533,\n",
-      "                \"litres\": 1.482958109950534\n",
-      "            },\n",
-      "            \"renewable\": {\n",
-      "                \"grams\": 2.3115384929940106,\n",
-      "                \"litres\": 1.2856777098032683\n",
-      "            }\n",
-      "        }\n",
-      "    },\n",
-      "    \"timestamp\": 1697621463\n",
-      "}\n"
-     ]
-    }
-   ],
-   "source": [
-    "test3 = websiteCarbon('https://www.uni.lu')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For a more detailled overview, please use [Ecograder](https://ecograder.com/)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Question**\n",
+    "Resources that you may find useful to understand the data:\n",
     "\n",
-    "Given a certain amount of CO2 emissions (in grams) for a full day, how would you compare the usage duration of various daily life objects (like light bulbs, laptops, electric cars, etc.) to match the CO2 output of the website ?"
+    "1. [WebsiteCarbon](https://websitecarbon.com/)\n",
+    "2. [Ecograder](https://ecograder.com/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question:\n",
+    "Using the `websiteCarbon` function, determine the carbon footprint of a specific website. If the API response is successful, interpret the data to explain the environmental impact of the website. In case of an error or if the website has a high carbon footprint, propose potential strategies that could be implemented to reduce the site's environmental impact."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def estimate_daily_life_object_usage(co2_emissions):\n",
-    "    # CO2 emissions in grams per hour for each object\n",
-    "    co2_emissions_per_hour = {\n",
-    "        \"Light bulb\": 50,\n",
-    "        \"Laptop\": 200,\n",
-    "        \"Desktop computer\": 400,\n",
-    "        \"Smartphone\": 20,\n",
-    "        \"Tablet\": 50,\n",
-    "        \"Television\": 200,\n",
-    "        \"Refrigerator\": 1000,\n",
-    "        \"Air conditioner\": 2000,\n",
-    "        \"Electric oven\": 3000,\n",
-    "        \"Washing machine\": 500,\n",
-    "        \"Dishwasher\": 1000,\n",
-    "        \"Electric car\": 20000\n",
-    "    }\n",
-    "    \n",
-    "    usage_times = {}\n",
-    "    \n",
-    "    for obj, emissions in co2_emissions_per_hour.items():\n",
-    "        usage_time = co2_emissions / emissions\n",
-    "        usage_times[obj] = usage_time\n",
-    "    \n",
-    "    return usage_times"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Estimated usage times:\n",
-      "Light bulb: 20.00 hours\n",
-      "Laptop: 5.00 hours\n",
-      "Desktop computer: 2.50 hours\n",
-      "Smartphone: 50.00 hours\n",
-      "Tablet: 20.00 hours\n",
-      "Television: 5.00 hours\n",
-      "Refrigerator: 1.00 hours\n",
-      "Air conditioner: 0.50 hours\n",
-      "Electric oven: 0.33 hours\n",
-      "Washing machine: 2.00 hours\n",
-      "Dishwasher: 1.00 hours\n",
-      "Electric car: 0.05 hours\n"
-     ]
-    }
-   ],
-   "source": [
-    "co2_emissions = 1000  # grams per hour\n",
-    "usage_times = estimate_daily_life_object_usage(co2_emissions)\n",
-    "print(\"Estimated usage times:\")\n",
-    "for obj, usage_time in usage_times.items():\n",
-    "    print(f\"{obj}: {usage_time:.2f} hours\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Light bulb': 20.0,\n",
-       " 'Laptop': 5.0,\n",
-       " 'Desktop computer': 2.5,\n",
-       " 'Smartphone': 50.0,\n",
-       " 'Tablet': 20.0,\n",
-       " 'Television': 5.0,\n",
-       " 'Refrigerator': 1.0,\n",
-       " 'Air conditioner': 0.5,\n",
-       " 'Electric oven': 0.3333333333333333,\n",
-       " 'Washing machine': 2.0,\n",
-       " 'Dishwasher': 1.0,\n",
-       " 'Electric car': 0.05}"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "usage_times"
+    "# You can check the carbon footprint of the website here:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Questions\n",
+    "**Your Answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# Additional questions\n",
     "\n",
     "1. Why is the carbon intensity of a website important?\n",
     "2. How accurate is the IP-to-CO2 Intensity API in determining the real-world carbon footprint of a server?\n",
