Update website sustainability questions

--- a/notebooks/web.ipynb
+++ b/notebooks/web.ipynb
@@ -227,11 +227,12 @@
     "\n",
     "# Additional questions\n",
     "\n",
-    "1. Why is the carbon intensity of a website important?\n",
-    "2. How accurate is the IP-to-CO2 Intensity API in determining the real-world carbon footprint of a server?\n",
-    "3. Are there any other factors, apart from grid intensity, that contribute to the carbon footprint of a website?\n",
-    "4. How can website owners make their websites more environmentally friendly?\n",
-    "5. What are some limitations of using IP addresses to determine the carbon intensity of a website?"
+    "1. How accurate is the IP-to-CO2 Intensity API in determining the real-world carbon footprint of a server?\n",
+    "2. Are there any other factors, apart from grid intensity, that contribute to the carbon footprint of a website?\n",
+    "3. How can website owners make their websites more environmentally friendly?\n",
+    "4. What are some limitations of using IP addresses to determine the carbon intensity of a website?\n",
+    "\n",
+    "---"
    ]
   },
   {
