--- a/notebooks/web.ipynb
+++ b/notebooks/web.ipynb
@@ -102,7 +102,8 @@
    "metadata": {},
    "source": [
     "## Question:\n",
-    "What is the carbon intensity and what is the percentage of electricity generated from fossil sources? "
+    "1. What is the website you are targeting ?\n",
+    "2. What is the carbon intensity and what is the percentage of electricity generated from fossil sources? "
    ]
   },
   {
