Update tasks and question formatting in ai.ipynb

--- a/notebooks/ai.ipynb
+++ b/notebooks/ai.ipynb
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hence, your tasks now are:\n",
+    "### Tasks:\n",
     "1. Read the **CodeCarbon** [documentation](https://mlco2.github.io/codecarbon/)\n",
     "2. Start to estimate your impact ([help link](https://github.com/mlco2/codecarbon/tree/master?tab=readme-ov-file#start-to-estimate-your-impact-))\n",
     "3. Instantiate a `EmissionsTracker` object and call the start function to start tracking and estimating the CO₂ of the compute section.\n",
@@ -98,123 +98,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[codecarbon INFO @ 12:33:22] [setup] RAM Tracking...\n",
-      "[codecarbon INFO @ 12:33:22] [setup] GPU Tracking...\n",
-      "[codecarbon INFO @ 12:33:22] No GPU found.\n",
-      "[codecarbon INFO @ 12:33:22] [setup] CPU Tracking...\n",
-      "[codecarbon WARNING @ 12:33:22] No CPU tracking mode found. Falling back on CPU constant mode.\n",
-      "[codecarbon INFO @ 12:33:24] CPU Model on constant consumption mode: AMD EPYC 7763 64-Core Processor\n",
-      "[codecarbon INFO @ 12:33:24] >>> Tracker's metadata:\n",
-      "[codecarbon INFO @ 12:33:24]   Platform system: Linux-6.2.0-1014-azure-x86_64-with-glibc2.31\n",
-      "[codecarbon INFO @ 12:33:24]   Python version: 3.10.8\n",
-      "[codecarbon INFO @ 12:33:24]   CodeCarbon version: 2.3.1\n",
-      "[codecarbon INFO @ 12:33:24]   Available RAM : 7.744 GB\n",
-      "[codecarbon INFO @ 12:33:24]   CPU count: 2\n",
-      "[codecarbon INFO @ 12:33:24]   CPU model: AMD EPYC 7763 64-Core Processor\n",
-      "[codecarbon INFO @ 12:33:24]   GPU count: None\n",
-      "[codecarbon INFO @ 12:33:24]   GPU model: None\n"
-     ]
-    }
-   ],
    "source": [
-    "tracker = EmissionsTracker(project_name=\"green_it_mnist\")\n",
-    "tracker.start()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "11490434/11490434 [==============================] - 1s 0us/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-16 12:33:31.833229: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 188160000 exceeds 10% of free system memory.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/2\n",
-      "1875/1875 [==============================] - 7s 3ms/step - loss: 0.2987 - accuracy: 0.9129\n",
-      "Epoch 2/2\n",
-      "1797/1875 [===========================>..] - ETA: 0s - loss: 0.1450 - accuracy: 0.9577"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[codecarbon INFO @ 12:33:43] Energy consumed for RAM : 0.000012 kWh. RAM Power : 2.904045581817627 W\n",
-      "[codecarbon INFO @ 12:33:43] Energy consumed for all CPUs : 0.000583 kWh. Total CPU Power : 140.0 W\n",
-      "[codecarbon INFO @ 12:33:43] 0.000596 kWh of electricity used since the beginning.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1439 - accuracy: 0.9580\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[codecarbon INFO @ 12:33:43] Energy consumed for RAM : 0.000012 kWh. RAM Power : 2.904045581817627 W\n",
-      "[codecarbon INFO @ 12:33:43] Energy consumed for all CPUs : 0.000588 kWh. Total CPU Power : 140.0 W\n",
-      "[codecarbon INFO @ 12:33:43] 0.000600 kWh of electricity used since the beginning.\n",
-      "/home/codespace/.python/current/lib/python3.10/site-packages/codecarbon/output.py:168: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  df = pd.concat([df, pd.DataFrame.from_records([dict(data.values)])])\n"
-     ]
-    }
-   ],
-   "source": [
-    "load_model(2)\n",
-    "emissions = tracker.stop()\n"
+    "### Question \n",
+    "What are the total emissions of your ANN computation? "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "**Question**: What are the total emissions of your ANN computation? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Emissions: 0.00023338130192471486 kg\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"Emissions: {emissions} kg\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
